<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jsureda.myvideostudium.IntroducirPelicula"
    tools:showIn="@layout/activity_introducir_pelicula">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/labelTitulo"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/lblTitulo2"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAnyo"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/labelAnyo"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/lblAnyo2"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblNota2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/labelNota"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <RatingBar
            android:id="@+id/barraNota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_weight="1"
            android:numStars="5"
            android:rating="1.0"
            android:stepSize="0.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblEstado2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/labelEstado"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp">

            <RadioButton
                android:id="@+id/radA"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/radioA" />

            <RadioButton
                android:id="@+id/radB"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/radioB" />

            <RadioButton
                android:id="@+id/radC"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/radioC" />
        </RadioGroup>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
